Atualizações gerais para o projeto