@@ -2,6 +2,7 @@ package com.grandesabegos.ControleDeAcessoTCC.security;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Set;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -20,14 +21,19 @@ public class UserDetailsImpl implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
+        // se for master, dá MASTER (e opcionalmente ADMIN também)
         if (Boolean.TRUE.equals(usuario.getIsMaster())) {
-            return Collections.singleton(new SimpleGrantedAuthority("ROLE_MASTER"));
-        } else if (Boolean.TRUE.equals(usuario.getIsAdmin())) {
-            return Collections.singleton(new SimpleGrantedAuthority("ROLE_ADMIN"));
-        } else {
-            return Collections.singleton(new SimpleGrantedAuthority("ROLE_USER"));
+            return Set.of(
+                new SimpleGrantedAuthority("ROLE_MASTER"),
+                new SimpleGrantedAuthority("ROLE_ADMIN") // opcional, se master também for admin
+            );
         }
+        if (Boolean.TRUE.equals(usuario.getIsAdmin())) {
+            return Collections.singleton(new SimpleGrantedAuthority("ROLE_ADMIN"));
+        }
+        return Collections.singleton(new SimpleGrantedAuthority("ROLE_USER"));
     }
+
 
 
     @Override
@@ -63,4 +69,12 @@ public class UserDetailsImpl implements UserDetails {
     public Usuario getUsuario() {
         return usuario;
     }
+    
+    public Long getId() {
+    	
+    	return usuario.getId();
+    	
+    }
+    
+    
 }
